Fixed menus not being opened when no filler is used